[workspace]
members = [
    "lib",
    "cli",
    "python"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/gtfierro/ontoenv-rs"
homepage = "https://github.com/gtfierro/ontoenv-rs"
description = "A tool for managing ontologies and their dependencies"

[workspace.dependencies]
anyhow = "1.0.79"
regex = "1.10.3"
walkdir = "2.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
json-ld = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.1"
log = "0.4.20"
serde_regex = "1.1.0"
glob = "0.3.1"
chrono = { version = "0.4.33", features = ["serde"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
clap = { version = "4.4.18", features = ["derive"] }
derive_builder = "0.13.0"
oxigraph = "0.3.22"

ontoenv = { path = "lib" }
