[workspace]
members = [
    "lib",
    "cli",
    "python",
    "rdf5d"
]
resolver = "2"

[workspace.package]
version = "0.4.0-a19"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/gtfierro/ontoenv-rs"
homepage = "https://github.com/gtfierro/ontoenv-rs"
description = "A tool for managing ontologies and their dependencies"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.79"
regex = "1.10.3"
walkdir = "2.4.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
json-ld = "0.21.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.1"
log = "0.4.20"
serde_regex = "1.1.0"
glob = "0.3.1"
chrono = { version = "0.4.33", features = ["serde"] }
petgraph = { version = "0.8", features = ["serde-1"] }
clap = { version = "4.4.18", features = ["derive"] }
derive_builder = "0.20"
oxigraph = "0.5"
memmap2 = "0.9"
zstd = "0.13"
rand = "0.9"

rdf5d = { version = "0.4.0-a19", path = "rdf5d", features = ["oxigraph", "zstd"] }

ontoenv = { version = "0.4.0-a19", path = "lib" }
ontoenv-cli = { version = "0.4.0-a19", path = "cli" }

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
debug = false
strip = true
lto = "thin"
codegen-units = 1
