[package]
name = "ontoenv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command line tool to manage ontologies and their imports in a local environment"
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[lib]
name = "ontoenv_cli"
path = "src/lib.rs"
doc = false

[[bin]]
name = "ontoenv"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
ontoenv.workspace = true
env_logger.workspace = true
oxigraph.workspace = true
chrono.workspace = true
walkdir.workspace = true
serde_json.workspace = true
log.workspace = true
