[package]
name = "ontoenv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust library for managing ontologies and their imports in a local environment."
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
walkdir.workspace = true
reqwest.workspace = true
json-ld.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde_regex.workspace = true
glob.workspace = true
chrono.workspace = true
petgraph.workspace = true
clap.workspace = true
derive_builder.workspace = true
serde.workspace = true
oxigraph.workspace = true
lazy_static = "1.4.0"
serde_with = "3.7.0"
tempfile = "3.10.1"
tempdir = "0.3.7"
pretty-bytes = "0.2.2"
