[project]
name = "pyontoenv"
version = "0.4.0"
description = "Compatibility wrapper that installs the ontoenv package."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" },
]
dependencies = ["ontoenv"]

[project.urls]
Homepage = "https://github.com/gtfierro/ontoenv-rs"
Repository = "https://github.com/gtfierro/ontoenv-rs"
Issues = "https://github.com/gtfierro/ontoenv-rs/issues"

[tool.uv.sources]
ontoenv = { path = "../python", editable = true }

[build-system]
requires = ["uv-build>=0.5.0"]
build-backend = "uv_build"
