[package]
name = "pyontoenv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command line tool to manage ontologies and their imports in a local environment"
repository.workspace = true
homepage.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ontoenv"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
ontoenv.workspace = true
anyhow.workspace = true
oxigraph.workspace = true
env_logger.workspace = true
log.workspace = true

[build-dependencies]
pyo3-build-config = "0.25"

[features]
abi3 = ["pyo3/abi3-py39"]
