[package]
name = "ontoenv-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command line tool to manage ontologies and their imports in a local environment"
repository.workspace = true
homepage.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ontoenv_python"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
ontoenv.workspace = true
ontoenv-cli = { workspace = true, optional = true }
anyhow.workspace = true
oxigraph.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = []
abi3 = ["pyo3/abi3-py39"]
cli = ["ontoenv-cli"]
