[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyontoenv"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "ontoenv"
version = "0.1.7a6"
description = "Python bindings for the OntoEnv Rust library. Manages ontology-based environments for building knowledge graphs."
license = "bsd-3-clause"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^7.0.0"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.0"

