[package]
name = "rdf5d"
version.workspace = true
edition = "2024"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "BSD-3-Clause"
repository = "https://github.com/gtfierro/r5tu"
homepage = "https://github.com/gtfierro/r5tu"
description = "Compact, mmap‑friendly on‑disk format for RDF 5‑tuples"
readme = "README.md"

[dependencies]
clap.workspace = true
oxigraph = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

[features]
default = []
zstd = ["dep:zstd"]
oxigraph = ["dep:oxigraph"]
mmap = ["dep:memmap2"]
